--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "cron-parser": "^4.7.1",
     "d3": "^7.8.2",
     "dagre-compound": "^0.0.13",
