--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "d3": "^7.8.2",
     "dagre-compound": "^0.0.13",
     "monaco-editor": "^0.34.1",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng-zorro-antd": "^15.0.3",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
